--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Test vue app",
   "main": "main.js",
   "scripts": {
+    "build": "webpack --mode=production",
     "dev": "webpack-dev-server --mode=development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
